--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,7 +30,7 @@
 
 body {
     font-family: var(--primary-font);
-    
+    padding-top: 57.15px;
 }
 
 h1,
@@ -50,8 +50,9 @@ h2 {
 }
 
 section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin: 2rem;
+    padding: 2rem;
+    padding-top: 4rem;
 }
 
 .sub-heading-color {
